[Chore]: .yml 정리

--- a/.gitignore
+++ b/.gitignore
@@ -66,8 +66,4 @@ hs_err_pid*
 replay_pid*
 
 ### application*.yml ###
-src/main/resources/application-db.yml
-#src/main/resources/application-jwt.yml
-#src/main/resources/application-mail.yml
-#src/main/resources/application-aws.yml
-#src/main/resources/application-oauth.yml
+application-*.yml
