--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,9 @@ dependencies {
     runtimeOnly("io.jsonwebtoken:jjwt-impl:0.11.5")
     // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-jackson
     runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.11.5")
+
+    // env reader
+    implementation 'io.github.cdimascio:dotenv-spring-boot:2.3.2'
 }
 
 tasks.named('test') {
