--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: FINO
   profiles:
     active: ${SPRING_PROFILES_ACTIVE:local}
-    include: db
+    include: db, jwt
   devtools:
     restart:
       enabled: false
