[Feat]: 젠킨스 디벨롭

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: ${APP_NAME:FINO}
   profiles:
     active: ${SPRING_PROFILES_ACTIVE:prod}
-    include: db
+    include: db, jwt
   devtools:
     restart:
       enabled: ${DEVTOOLS_RESTART_ENABLED:false}
